--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1> Hey. Im Bald </h1>
-<p> Hey, I'm a paragraph</p>
-<a href="https://google.com" Target="_Blank" title="Lets go to Google">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test Page</title>
+</head>
+<body>
+	<h1> Hey. Im Bald </h1>
+	<p> Hey, I'm a <b>paragraph</b> </p>
+	<p> my Name is:<br>
+	Joe</p>
+	<a href="https://google.com" Target="_Blank" title="Lets go to Google">Click me! I'm a link!</a>
+	<img src="img/cat.jpeg">
+</body>	
+</html>
